--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,100 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Work Sans',sans-serif;
+  background:#f4f4ef;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.center {
+  text-align: center;
+}
+a {
+  color:#636363;
+  text-decoration: none;
+  transition:all 0.5s ease-in;
+}
+
+
+a:hover {
+  text-decoration: underline;
+}
+
+
+/* Navigation */
+
+.navbar {
+  background:#fff;
+  text-align:center;
+  padding:1.5rem 0;
+  width:100%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow:0 5px 15px 0 rgba(46, 61, 73, 0.12);
+}
+
+
+.navbar h2 {
+  margin:0;
+  font-weight:200;
+  font-size:30px;
+  letter-spacing: 4px;
+  font-family:'Work Sans',sans-serif;
+}
+
+
+/* Post Styles */
+
+.postForm {
+  position: center;
+  padding: 5%;
+  margin-left: 20%;
+
+}
+
+/* All Posts */
+
+.allPost{
+  position: center;
+  padding: 5%;
+  margin-left: 20%;
+}
+
+/* Post */
+
+.postContent{
+  background-color: white;
+  width: 20%;
+  padding: 2%;
+  border: 1px solid black;
+  margin-top: 2%;
+}
+
+/* Button */
+
+.edit {
+  background:#02b3e4;;
+  border:none;
+  text-align: center;
+  font-size:15px;
+  padding:10px 25px;
+  border-radius:15px;
+  cursor:pointer;
+  margin-right:auto;
+  outline: none;
+  color:#fff;
+  margin-top: 2%;
+}
+
+.delete {
+  background: #ff7777;
+  border:none;
+  text-align: center;
+  font-size:15px;
+  padding:10px 25px;
+  border-radius:15px;
+  outline: none;
+  color:#fff;
+  margin-left: 3%;
+  margin-top: 2%;
 }
